# hakyll.fania.uk

./: .gitignore  about.md  about.md.BACKUP  cheats.md  contact.markdown  contact.md  dreams.md  fania.cabal  haskell.md  haskellold.html  images.html  images.md  index.html  index.md  links.md  new.cabal  other.md  readme.markdown  readme.md  site.hi  site.hs  stack.yaml  uni.md
_site/: about.html  archive.html  cheats.html  contact.html  dreams.html  images.html  index.html  other.html  stuff.html  uni.html
_site/css/: default.css
_site/posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html  2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  test.html
css/: default.css  pandoc.css
docs/: about.html  cheats.html  contact.html  haskell.html  images.html  index.html  links.html  stuff.html
docs/css/: default.css
docs/posts/: 2014-03-12-bernier.html  (+16 more)
fania/: site.hi
new/: about.md  index.html  site.hs
old/: .gitignore  about.md  cheats.md  dreams.md  fania.cabal  index.html  other.md  readme.md  site.hs  uni.md
posts/: 2014-03-12-bernier.md  2014-03-12-calvert.md  2014-03-12-krz.md  2014-05-27-stones.md  2014-06-09-xkcd.md  2014-06-14-cecilia.md  2014-07-08-zkm.md  2014-07-14-murakami.md  2014-07-29-writing.md  2014-09-30-obfuscation.md  2015-03-14-patakosmos.md  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2017-09-30-meaning.md  2017-10-01-escher.md  2017-10-01-jarry.md  2017-10-01-phd.md  2017-10-07-hiroshige.md  2017-11-25-svg.md  2017-4-19-pamatamap.md  2018-4-19-pamatamap.md  test.md
solutions/: 2017-10-01-acrobat.md  2017-10-01-git.md  2017-10-01-lambda.md  2017-10-01-links.md  2017-10-01-paths.md  2017-10-01-pip.md  2017-10-01-python.md  2017-10-01-surface.md  2017-10-01-terminal.md  2017-10-01-texcount.md  2017-10-01-virtualenv.md  2017-10-01-vsmarket.md  2017-10-01-wordnet.md  2017-11-15-curl.md  2017-11-15-gitignore.md  2017-11-15-server.md  2017-12-02-webdev.md  2018-05-17-ssl.md
tags/: art.html  post.html  test.html
templates/: cheats.html  default.html  head.html  index.html  maths.html  post-list-imgs.html  post-list-text.html  post-list.html  post.html  stuff.html  tag.html  withTOC.html
(+190 files in other folders)
