name:               new
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base                 >= 4.8    && < 5,
                    binary               >= 0.5    && < 0.9,
                    blaze-html           >= 0.5    && < 0.10,
                    blaze-markup         >= 0.5.1  && < 0.9,
                    bytestring           >= 0.9    && < 0.11,
                    containers           >= 0.3    && < 0.6,
                    cryptohash           >= 0.7    && < 0.12,
                    data-default         >= 0.4    && < 0.8,
                    deepseq              >= 1.3    && < 1.5,
                    directory            >= 1.0    && < 1.4,
                    filepath             >= 1.0    && < 1.5,
                    hakyll               >= 4.9,
                    lrucache             >= 1.1.1  && < 1.3,
                    mtl                  >= 1      && < 2.3,
                    network              >= 2.6    && < 2.7,
                    network-uri          >= 2.6    && < 2.7,
                    pandoc               >= 1.14   && < 1.20,
                    pandoc-citeproc      >= 0.10.5 && < 0.11,
                    parsec               >= 3.0    && < 3.2,
                    process              >= 1.0    && < 1.6,
                    random               >= 1.0    && < 1.2,
                    regex-base           >= 0.93   && < 0.94,
                    regex-tdfa           >= 1.1    && < 1.3,
                    resourcet            >= 1.1    && < 1.2,
                    scientific           >= 0.3.4  && < 0.4,
                    tagsoup              >= 0.13.1 && < 0.15,
                    text                 >= 0.11   && < 1.3,
                    time                 >= 1.4    && < 1.8,
                    time-locale-compat   >= 0.1    && < 0.2,
                    unordered-containers >= 0.2    && < 0.3,
                    vector               >= 0.11   && < 0.13,
                    yaml                 >= 0.8.11 && < 0.9,
                    optparse-applicative >= 0.12   && < 0.15
  ghc-options:      -threaded
  default-language: Haskell2010
